Removing obsolete Reflection
There was some old code here related to pre-Java-1.6 support